fixed map clipping

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -27,6 +27,7 @@ html, body {
 
 #mapContainer {
 	grid-area: mapContainer;
+	position: relative;
 }
 
 #drawingLayer {
